--- a/css/styles.css
+++ b/css/styles.css
@@ -154,9 +154,56 @@ header {
     text-align: center;
     letter-spacing: 0.06em;
 }
+.about .container {
+    /* display: flex; */
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
 .features {
-    background: var(--light-grey-bg-team);
+    display: flex;
+    align-items: center;
+    margin-bottom: 94px;
+    margin-left: 0;
+    margin-right: 0;
+    background: transparent;
+}
+
+.features li {
+    width: 270px;
+    height: 101px;
+}
+
+.features li:nth-child(1) {
+    margin-right: 30px;
+}
+
+.features li:nth-child(2) {
+    margin-right: 30px;
+}
+
+.features li:nth-child(3) {
+    margin-right: 30px;
+}
+
+.about h2 {
+    margin-bottom: 50px; 
+}
+
+.about-images {
+    display: flex;
+    align-items: center;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.images {
+    width: 365px;
+}
+
+.images:nth-child(2) {
+margin-left: 30px;
+margin-right:30px;
 }
 
 .title-features {
