--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ header {
     width: 1200px;
     padding: 15px 15px;
     margin: 0 auto;
-    /* border: 1px solid #FF6C00; */
+    /* outline: 1px solid #FF6C00; */
 }
 
 .header-nav,
@@ -99,6 +99,11 @@ img {
 
 .header-address p:nth-child(2) {
     margin-left:50px;
+    margin-right: 0;
+}
+
+.header-address p {
+    margin-right: 0;
 }
 
 .portfolio-header-address p:nth-child(2) {
@@ -159,6 +164,7 @@ img {
     color: var(--white);
     text-align: center;
     letter-spacing: 0.06em;
+    border-radius: 4px;
 }
 .about .container {
     /* display: flex; */
@@ -266,6 +272,8 @@ margin-right:30px;
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .workers h3 {
@@ -361,12 +369,47 @@ footer {
     line-height: 24px;
 }
  
+.portfolio-main .container {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.portfolio-btns {
+    display: flex;
+    margin-left: 280px;
+    margin-right: 279px;
+    margin-bottom: 50px;
+}
+
+.portfolio-btns a:nth-child(1) {
+    margin-right: 8px;
+    margin-left: 0;
+}
+
+.portfolio-btns a:nth-child(3) {
+    margin-right: 8px;
+    margin-left: 0;
+}
+
+
+.portfolio-btns a:nth-child(2n + 2) {
+    margin-right: 8px;
+    margin-left: 0;
+}
+
+
 .portfolio-btn {
     background-color: var(--light-grey-bg-team);
+    padding: 6px 22px;
     color: var(--dark-graphite-text);
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
+    text-align: center;
+    height: 38px;
+    width: auto;
+    border-radius: 4px;
+    
 }
 
 .portfolio-btn:hover {
@@ -386,4 +429,33 @@ footer {
   
 .portfolio-main h1 {
     display:none;
+}
+
+.portfolio-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin-top: -30px;
+    margin-left: -30px;
+}
+
+.portfolio-gallery li {
+    background-color: var(--white);
+    outline: 1px solid var(--light-grey-stroke);
+    /* border: 1 px solid var(--light-grey-stroke); */
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
+.portfolio-gallery h3 {
+    margin-top: 20px;
+    margin-bottom: 4px;
+    margin-left: 24px;
+}
+
+.portfolio-gallery p {
+    margin-left: 24px;
+    margin-bottom: 20px;
 }
