--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ img {
     font-size: 26px;
     line-height: 31px;
     font-family: 'Raleway', sans-serif;
+    letter-spacing: 0.03em;
 }
 
 .web {
@@ -125,6 +126,8 @@ img {
    font-size: 26px;
    line-height: 31px;
    font-family: 'Raleway', sans-serif;
+   letter-spacing: 0.03em;
+
 }
 .title {
     color: var(--dark-graphite-text);
@@ -132,6 +135,7 @@ img {
     font-size: 36px;
     line-height: 42px;
     text-align: center;
+    letter-spacing: 0.03em;
 }
 
 .hero .container {
@@ -218,8 +222,8 @@ img {
 }
 
 .images:nth-child(2) {
-margin-left: 30px;
-margin-right:30px;
+    margin-left: 30px;
+    margin-right:30px;
 }
 
 .title-features {
@@ -227,6 +231,8 @@ margin-right:30px;
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 .features-p {
@@ -234,6 +240,7 @@ margin-right:30px;
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
+    letter-spacing: 0.03em;
 }
 
 .team .container {
@@ -272,6 +279,7 @@ margin-right:30px;
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
+    letter-spacing: 0.03em;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
@@ -289,6 +297,7 @@ margin-right:30px;
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
+    letter-spacing: 0.03em;
 }
 
 .work-position {
@@ -296,6 +305,8 @@ margin-right:30px;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 
@@ -308,6 +319,7 @@ margin-right:30px;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
+    letter-spacing: 0.02em;
 }
 
 .link-header.current {
@@ -319,6 +331,7 @@ margin-right:30px;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
+    letter-spacing: 0.02em;
 }
 
 .link-hd-adr:hover {
@@ -340,6 +353,7 @@ footer {
     font-size: 26px;
     line-height: 31px;
     font-family: 'Raleway', sans-serif;
+    letter-spacing: 0.03em;
 }
 
 .footer-address {
@@ -360,6 +374,7 @@ footer {
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
+    letter-spacing: 0.03em;
 }
 
 .link-foot {
@@ -367,6 +382,7 @@ footer {
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
+    letter-spacing: 0.03em;
 }
  
 .portfolio-main .container {
@@ -425,6 +441,7 @@ footer {
     font-weight: 400;
     font-size: 16px;
     line-height: 30px;
+    letter-spacing: 0.06em;
 }
   
 .portfolio-main h1 {
