--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ img {
     display: flex;
     /* justify-content: space-between; */
     align-items: center;
-    margin-top: 32px;
+    /* margin-top: 32px; */
     /* border-bottom: 1px solid var(--light-grey-stroke); */
     height: 80px;
 }
